--- a/src/components/styled/list.styled.css
+++ b/src/components/styled/list.styled.css
@@ -6,7 +6,7 @@
 .list {
     display: flex;
     flex-direction: column;
-    background: var(--surface-container-low);
+    background: var(--surface-container-high);
     border: 0.125rem solid var(--outline-variant);
     border-radius: var(--corner-tl) var(--corner-tr) var(--corner-br)
         var(--corner-bl);
