--- a/src/components/styled/sidebar.styled.css
+++ b/src/components/styled/sidebar.styled.css
@@ -6,7 +6,7 @@
 .sidebar {
     width: 30rem;
     padding: 2rem;
-    background: var(--surface-container-low);
+    background: var(--surface-container-high);
     border: 0.125rem solid var(--outline-variant);
     border-radius: var(--corner-tl) var(--corner-tr) var(--corner-br)
         var(--corner-bl);
